--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ Assets/Plugins/Sirenix/Demos/Custom Attribute Processors.unitypackage.meta
 Assets/Plugins/Sirenix/Demos/Custom Drawers.unitypackage.meta
 Assets/Plugins/Sirenix/Demos/Editor Windows.unitypackage.meta
 Assets/Plugins/Sirenix/Demos/Sample - RPG Editor.unitypackage.meta
+UserSettings/Layouts/default-2022.dwlt
