--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ Assets/Plugins/Sirenix/Demos/Custom Drawers.unitypackage.meta
 Assets/Plugins/Sirenix/Demos/Editor Windows.unitypackage.meta
 Assets/Plugins/Sirenix/Demos/Sample - RPG Editor.unitypackage.meta
 UserSettings/Layouts/default-2022.dwlt
+UserSettings/Layouts/default-2021.dwlt
+Assets/Plugins/Easy Save 3/Resources/ES3/ES3Defaults.asset
