--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ Assets/Plugins/Sirenix/Demos/Sample - RPG Editor.unitypackage.meta
 UserSettings/Layouts/default-2022.dwlt
 UserSettings/Layouts/default-2021.dwlt
 Assets/Plugins/Easy Save 3/Resources/ES3/ES3Defaults.asset
+UserSettings/Layouts/default-2021.dwlt
