--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ UserSettings/Layouts/default-2022.dwlt
 UserSettings/Layouts/default-2021.dwlt
 Assets/Plugins/Easy Save 3/Resources/ES3/ES3Defaults.asset
 UserSettings/Layouts/default-2021.dwlt
+UserSettings/Layouts/default-2021.dwlt
