적 모델링, 애니메이션 업로드

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ UserSettings/Layouts/default-2021.dwlt
 Assets/Plugins/Easy Save 3/Resources/ES3/ES3Defaults.asset
 UserSettings/Layouts/default-2021.dwlt
 UserSettings/Layouts/default-2021.dwlt
+Assets/000.Eeeeden/00-Fbxs/00-Character/.DS_Store
+Assets/000.Eeeeden/00-Fbxs/.DS_Store
+Assets/000.Eeeeden/.DS_Store
+Assets/.DS_Store
+.vsconfig
+.DS_Store
+UserSettings/EditorUserSettings.asset
