--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ Assets/.DS_Store
 .DS_Store
 UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/default-2021.dwlt
+UserSettings/Layouts/default-2021.dwlt
