--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ Assets/.DS_Store
 UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/default-2021.dwlt
 UserSettings/Layouts/default-2021.dwlt
+UserSettings/Layouts/default-2021.dwlt
