--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mobile.android-logcat": "1.3.2",
+    "com.unity.purchasing": "4.10.0",
     "com.unity.remote-config": "4.0.0",
     "com.unity.render-pipelines.universal": "12.1.11",
     "com.unity.test-framework": "1.1.31",
